ASA pride scholarship note added

--- a/careers/career-profiles/posts/2023/06/28/albert-lee.qmd
+++ b/careers/career-profiles/posts/2023/06/28/albert-lee.qmd
@@ -90,7 +90,14 @@ Be open and multidisciplinary. Many good ideas in statistics come from other fie
 Machine learning has transformed statistics both as a consumer and a contributor. It consumes statistics in that it requires cutting-edge statistical techniques and algorithms for its estimation. Machine learning has important applications in many of the statistical sciences.  
 
 **And what do you think will be the main challenges facing the profession over the next few years?**\
-The proper use of statistics or statistical ethics is an important societal challenge. Machine learning is becoming increasingly sophisticated, and its applications are more broad and pervasive. Machine learning algorithms are making more and more decisions in society, including mortgage loan approvals, residential home prices, and which prisoners receive parole. These are important and weighty decisions. How do we know that these decisions are unbiased and fair?  
+The proper use of statistics or statistical ethics is an important societal challenge. Machine learning is becoming increasingly sophisticated, and its applications are more broad and pervasive. Machine learning algorithms are making more and more decisions in society, including mortgage loan approvals, residential home prices, and which prisoners receive parole. These are important and weighty decisions. How do we know that these decisions are unbiased and fair?
+
+::: {.callout-note style="margin-top: 2.25rem;" appearance="simple"}
+## About the ASA Pride Scholarship
+The [ASA Pride Scholarship](https://www.amstat.org/the-asa-celebrates-pride!) was established to raise awareness for and support the success of LGBTQ+ statisticians and data scientists and allies. The scholarship will celebrate their diverse backgrounds and showcase the invaluable skills and perspectives these individuals bring to the ASA, statistics, and data science.
+
+[Apply or nominate someone](https://www.amstat.org/your-career/awards/asa-pride-scholarship) for the ASA Pride Scholarship.
+:::
 
 ::: {.article-btn}
 [Discover more Career profiles](/careers/career-profiles/index.qmd)
