--- a/careers/career-profiles/posts/2023/06/28/claire-morton.qmd
+++ b/careers/career-profiles/posts/2023/06/28/claire-morton.qmd
@@ -79,6 +79,13 @@ I’m really interested in combining quantitative research with community-based 
 **And what do you think will be the main challenges facing the profession over the next few years?**\
 The main challenges will be related to statistical literacy, both for the people consuming and doing statistics. While statistical methods and data becoming more accessible is a positive development, it has meant that more analyses are done incorrectly and that more misleading results are publicized (and absorbed) as truth. It’s getting much easier to twist numbers to support whatever we want them to say, and I think this will continue to challenge both statisticians and non-statisticians in the future.   
 
+::: {.callout-note style="margin-top: 2.25rem;" appearance="simple"}
+## About the ASA Pride Scholarship
+The [ASA Pride Scholarship](https://www.amstat.org/the-asa-celebrates-pride!) was established to raise awareness for and support the success of LGBTQ+ statisticians and data scientists and allies. The scholarship will celebrate their diverse backgrounds and showcase the invaluable skills and perspectives these individuals bring to the ASA, statistics, and data science.
+
+[Apply or nominate someone](https://www.amstat.org/your-career/awards/asa-pride-scholarship) for the ASA Pride Scholarship.
+:::
+
 ::: {.article-btn}
 [Discover more Career profiles](/careers/career-profiles/index.qmd)
 :::
