--- a/index.qmd
+++ b/index.qmd
@@ -16,7 +16,8 @@ listing:
     - /careers
     - /viewpoints
     - "!index.qmd"
-    - "!chanuki-seresinhe.qmd"
+    - "!claire-morton.qmd"
+    - "!albert-lee.qmd"
     sort: "date desc"
     type: grid
     categories: false
@@ -123,15 +124,15 @@ toc: false
 ---
 ::: {.content-container}
 ::: {.top-story .purple-background}
-<a href="/careers/career-profiles/posts/2023/06/20/chanuki-seresinhe.qmd">
+<a href="/careers/career-profiles/posts/2023/06/28/claire-morton.qmd">
 
 ::: grid
 ::: {.g-col-12 .g-col-lg-4 .top-story-text}
-## 'Once I started to see what was possible with data science, there was no going back'
-Chanuki Seresinhe is head of data science at Zoopla and Hometrack. This is her career story so far -- from researching beautiful places to helping web users buy, sell and rent property spaces.
+## Pride, identity, and the power of data
+This week, in celebration of Pride, Real World Data Science is collaborating with the JEDI Outreach Group of the American Statistical Association (ASA) and the ASA LGBTQ+ Advocacy Committee to highlight the achievements of statisticians and data scientists from across the LGBTQ+ spectrum. Read inspiring career profiles of Claire Morton and Albert Lee.
 :::
 ::: {.g-col-12 .g-col-lg-8 .top-story-img}
-![](careers/career-profiles/posts/2023/06/20/images/chanuki-seresinhe.png)
+![](careers/career-profiles/posts/2023/06/28/images/claire-and-albert.png)
 :::
 :::
 
@@ -139,10 +140,6 @@ Chanuki Seresinhe is head of data science at Zoopla and Hometrack. This is her c
 
 :::
 :::
-
-<!-- ::: {.header-banner .header-image}
-![](images/nasa-Q1p7bh3SHj8-unsplash-crop.png)
-::: -->
 
 ::: {.header-text} 
 ::: {.content-container}
@@ -183,12 +180,12 @@ Michael Timothy Bennett challenges the 'AI doomsayer' narrative
 
 ::: {.content-container}
 ::: {.listing-block}
-<a href="ideas/index.qmd">
+<a href="viewpoints/interviews/index.qmd">
 
-## Data Science Ideas
-</a> 
+## Interviews 
+</a>
 
-::: {#ideas}
+::: {#interviews}
 :::
 
 :::
@@ -196,12 +193,12 @@ Michael Timothy Bennett challenges the 'AI doomsayer' narrative
 
 ::: {.content-container}
 ::: {.listing-block}
-<a href="viewpoints/interviews/index.qmd">
+<a href="ideas/index.qmd">
 
-## Interviews 
-</a>
+## Data Science Ideas
+</a> 
 
-::: {#interviews}
+::: {#ideas}
 :::
 
 :::
@@ -225,12 +222,12 @@ Data science leaders discuss large language models
 
 ::: {.content-container}
 ::: {.listing-block}
-<a href="careers/index.qmd">
+<a href="viewpoints/editors-blog/index.qmd">
 
-## Data Science Careers 
-</a>
+## Editors' Blog
+</a> 
 
-::: {#careers}
+::: {#editors-blog}
 :::
 
 :::
@@ -238,12 +235,12 @@ Data science leaders discuss large language models
 
 ::: {.content-container}
 ::: {.listing-block}
-<a href="viewpoints/editors-blog/index.qmd">
+<a href="careers/index.qmd">
 
-## Editors' Blog
-</a> 
+## Data Science Careers 
+</a>
 
-::: {#editors-blog}
+::: {#careers}
 :::
 
 :::
