thumbnail image added

--- a/ideas/posts/2023/07/03/trusted-AI.qmd
+++ b/ideas/posts/2023/07/03/trusted-AI.qmd
@@ -8,8 +8,8 @@ categories:
   - Regulation
 author: Maxine Setiawan and Mira Pijselman
 date: 07/03/2023
-# image: images/albert-lee.png
-# image-alt: Photo of Albert Lee. Photo supplied by Albert Lee, used with permission.
+image: images/explainable-AI.png
+image-alt: Nine small images with schematic representations of differently shaped neural networks, a human hand making a different gesture is placed behind each network.
 toc: true
 ---
 With artificial intelligence (AI) becoming increasingly prevalent across sectors, so too have conversations about AI ethics. AI ethics provides a repeatable and comprehensive way to assess what we should and should not be doing with AI, and sets out how we ought to design, use, and govern AI products in accordance with key principles. Ethical frameworks are essential to derive sustainable value from AI products and services and build trust.
@@ -115,7 +115,7 @@ For further socio-technical reading on AI and data ethics, we suggest:
 ::: grid
 ::: {.g-col-12 .g-col-md-12}
 About the authors
-: [Maxine Setiawan](https://www.ey.com/en_uk/people/maxine-setiawan) is a social data scientist specialising in trusted AI and AI and data risk in EY UK&I. With her multi-disciplinary background, she works to help clients understand and manage risks from their data and AI systems, and to ensure AI governance that is fair, accountable, and trustworthy. Maxine holds an MSc in social data science from the University of Oxford. 
+: [Maxine Setiawan](https://www.ey.com/en_uk/people/maxine-setiawan) is a social data scientist specialising in trusted AI, and AI and data risk in EY UK&I. With her multi-disciplinary background, she works to help clients understand and manage risks from their data and AI systems, and to ensure AI governance that is fair, accountable, and trustworthy. Maxine holds an MSc in social data science from the University of Oxford. 
 
 : [Mira Pijselman](https://www.ey.com/en_uk/people/mira-pijselman) is the digital ethics lead for EY UK&I, where she focuses on the responsible governance of key emerging technologies, including artificial intelligence, quantum technologies, and the metaverse. A social scientist and philosopher by training, she helps clients to map, understand, secure, and capitalise on their data and technology potential safely. Mira holds an MSc in the social science of the internet from the University of Oxford.
 
@@ -125,7 +125,9 @@ About the authors
 Copyright and licence
 : &copy; 2023 Maxine Setiawan and Mira Pijselman
 
-<a href="http://creativecommons.org/licenses/by/4.0/?ref=chooser-v1" target="_blank" rel="license noopener noreferrer" style="display:inline-block;"> <img style="height:22px!important;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/cc.svg?ref=chooser-v1"><img style="height:22px!important;margin-left:3px;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/by.svg?ref=chooser-v1"></a> This article is licensed under a Creative Commons Attribution 4.0 (CC BY 4.0) <a href="http://creativecommons.org/licenses/by/4.0/?ref=chooser-v1" target="_blank" rel="license noopener noreferrer" style="display:inline-block;"> International licence</a>. Images are not covered by this licence.  
+<a href="http://creativecommons.org/licenses/by/4.0/?ref=chooser-v1" target="_blank" rel="license noopener noreferrer" style="display:inline-block;"> <img style="height:22px!important;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/cc.svg?ref=chooser-v1"><img style="height:22px!important;margin-left:3px;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/by.svg?ref=chooser-v1"></a> This article is licensed under a Creative Commons Attribution 4.0 (CC BY 4.0) <a href="http://creativecommons.org/licenses/by/4.0/?ref=chooser-v1" target="_blank" rel="license noopener noreferrer" style="display:inline-block;"> International licence</a>. 
+
+Thumbnail image by <a href="https://www.burg-halle.de/en/xlab">Alexa Steinbrück</a> / <a href="https://www.betterimagesofai.org">Better Images of AI</a> / Explainable AI / <a href="https://creativecommons.org/licenses/by/4.0/">Licenced by CC-BY 4.0</a>.  
 
 :::
 
