--- a/ideas/posts/2023/07/03/trusted-AI.qmd
+++ b/ideas/posts/2023/07/03/trusted-AI.qmd
@@ -1,8 +1,8 @@
 ---
 title: "Trusted AI: translating AI ethics from theory into practice"
-# description: |
-#   Albert Lee, the founding partner at Summit Consulting, describes his career journey -- from mathematics and economics at university to the birth of data science and building a company from scratch.  
-categories:
+description: |
+  Data scientists can act as critical enablers of ethical AI when they have the right knowledge and toolkits at their disposal. Maxine Setiawan and Mira Pijselman review three key attributes of trustworthy AI -- transparency, explainability, and fairness -- and ways to put these into practice.
+categories: 
   - AI ethics
   - Principles
   - Regulation
@@ -29,17 +29,17 @@ At the time of writing, there is no single universally accepted standard that di
 -	Resilient
 -	High-performing
 
-In this article, we take a deeper dive into the first three attributes, transparency, explainability, and unbiasedness (or fairness): areas where data scientists can act as critical enablers of ethical AI when they have the right knowledge and toolkits at their disposal.
+In this article, we take a deeper dive into the first three attributes, transparency, explainability, and unbiasedness (or fairness). These are areas where data scientists can act as critical enablers of ethical AI when they have the right knowledge and toolkits at their disposal.
 
 ### Transparency
 Transparency is the ability to provide meaningful information to foster awareness and understanding of an AI system. It starts with documenting AI systems in a way that is accessible for a broad audience with a spectrum of technical abilities. It is a simple yet powerful way to build trust in AI. It empowers non-technical stakeholders to critically evaluate AI development decisions, thereby unlocking multi-disciplinary insights that can mitigate reputational or performance risks. Further, it also builds trust with society, as it can enable everyday users to interrogate AI design decisions, product capabilities, and system limitations, thereby permitting users to make informed judgements about technology. Unfortunately, transparency is often misunderstood as disclosing trade secrets or proprietary information, such as source code and datasets. However, transparency can be achieved without disclosing such technically complex information. Instead, it can be as simple as disclosing where and when an AI system is being used, or for what purposes a model should be employed.
 
-But what exactly does “documenting AI systems” look like? Documentation should consist of a mix of technical components (system architecture, dataset selection determination, model selection techniques, etc.) and non-technical components (business case, product purpose of use, alignment to overall AI strategy, etc.). The research community has recommended AI documentation standards, such as [datasheets for datasets](https://arxiv.org/pdf/1803.09010.pdf) and [model cards for model reporting](https://arxiv.org/pdf/1810.03993.pdf). You can liken datasheets or model cards to the importance placed upon commenting your code -- the more information available around decisions throughout model development, the greater the certainty that these artefacts will be understood and used as intended moving forward. Proper documentation and governance will help ensure accountability, improve internal and external oversight, and initiate discussions around model optimisation goals and their trade-offs, such as including fairness and accuracy in optimisation objectives.
+But what exactly does “documenting AI systems” look like? Documentation should consist of a mix of technical components (system architecture, dataset selection determination, model selection techniques, etc.) and non-technical components (business case, product purpose of use, alignment to overall AI strategy, etc.). The research community has recommended AI documentation standards, such as [datasheets for datasets](https://arxiv.org/pdf/1803.09010.pdf) and [model cards for model reporting](https://arxiv.org/pdf/1810.03993.pdf). You can liken datasheets or model cards to the importance placed upon commenting your code -- the more information there is available around decisions throughout model development, the greater the certainty that these artefacts will be understood and used as intended moving forward. Proper documentation and governance will help ensure accountability, improve internal and external oversight, and initiate discussions around model optimisation goals and their trade-offs, such as including fairness and accuracy in optimisation objectives.
 
 With upcoming AI regulations, transparency requirements will become more integral. For example, the [European Union (EU) AI Act](https://artificialintelligenceact.eu/) introduces specific transparency obligations, such as bot disclosures, for both users and providers of AI systems, which would allow users to opt out of interacting with an AI system. Furthermore, in higher risk use cases, specific technical documentation is needed, which would include details of a system’s intended purpose and descriptions of its development process.
 
 ### Explainability
-Once transparency is enabled, explainability is a natural next step, especially when an AI product is implemented in a more regulated or high-risk environment. Explainability is the ability to express why an AI system reached a particular decision or understand the features that affect model behaviour. Explainability is a key concern within the field of Explainable AI, which, as a discipline, strives to improve trustworthiness by enabling a better understanding of a system’s underlying logic via a suite of technical methods.
+Once transparency is enabled, explainability is a natural next step, especially when an AI product is implemented in a more regulated or high-risk environment. Explainability is the ability to express why an AI system reached a particular decision or understand the features that affect model behaviour. Explainability is a key concern within the field of explainable AI, which, as a discipline, strives to improve trustworthiness by enabling a better understanding of a system’s underlying logic via a suite of technical methods.
 
 Fundamentally, different model architectures mean that some models are more interpretable than others, as the steps used to evaluate their predictions are easier for humans to comprehend. Decision trees, for example, have more human-interpretable characteristics than deep learning models. Different model architectures also mean that there are interpretation tools that are only applicable to certain models, such as regression weights in a linear model. 
 
