--- a/careers/career-profiles/posts/2023/06/20/chanuki-seresinhe.qmd
+++ b/careers/career-profiles/posts/2023/06/20/chanuki-seresinhe.qmd
@@ -102,7 +102,7 @@ Copyright and licence
 
 ::: {.g-col-12 .g-col-md-6}
 How to cite
-: Tarran, Brian. 2023. "'Once I started to see what was possible with data science, there was no going back'" Real World Data Science, June 20, 2023. [URL](https://realworlddatascience.net/careers/career-profiles/posts/2023/06/20/chanuki-seresinhe.html)
+: Tarran, Brian. 2023. "'Once I started to see what was possible with data science, there was no going back.'" Real World Data Science, June 20, 2023. [URL](https://realworlddatascience.net/careers/career-profiles/posts/2023/06/20/chanuki-seresinhe.html)
 :::
 :::
 :::
