--- a/case-studies/posts/2023/06/15/road-to-reproducible-research.qmd
+++ b/case-studies/posts/2023/06/15/road-to-reproducible-research.qmd
@@ -334,7 +334,7 @@ Copyright and licence
 
 ::: {.g-col-12 .g-col-md-6}
 How to cite
-: Svanidze, Davit, Andre Python, Christoph Weisser, Benjamin Säfken, Thomas Kneib, and Junfen Fu. 2023. "The road to reproducibility: hazards to avoid and tools to get you there safely." Real World Data Science, June 15, 2023. [URL](https://realworlddatascience.net/case-studies/posts/2023/06/15/road-to-reproducible-research.html)
+: Svanidze, Davit, Andre Python, Christoph Weisser, Benjamin Säfken, Thomas Kneib, and Junfen Fu. 2023. "The road to reproducible research: hazards to avoid and tools to get you there safely." Real World Data Science, June 15, 2023. [URL](https://realworlddatascience.net/case-studies/posts/2023/06/15/road-to-reproducible-research.html)
 :::
 :::
 :::
