--- a/index.qmd
+++ b/index.qmd
@@ -16,8 +16,7 @@ listing:
     - /careers
     - /viewpoints
     - "!index.qmd"
-    - "!claire-morton.qmd"
-    - "!albert-lee.qmd"
+    - "!trusted-AI.qmd"
     sort: "date desc"
     type: grid
     categories: false
@@ -50,17 +49,17 @@ listing:
     max-items: 3
     feed: false
 
-  - id: careers
-    contents: 
-    - /careers
-    - "!index.qmd"
-    sort: "date desc"
-    type: grid
-    categories: false
-    sort-ui: false
-    filter-ui: false
-    max-items: 3
-    feed: false
+  # - id: careers
+  #   contents: 
+  #   - /careers
+  #   - "!index.qmd"
+  #   sort: "date desc"
+  #   type: grid
+  #   categories: false
+  #   sort-ui: false
+  #   filter-ui: false
+  #   max-items: 3
+  #   feed: false
 
   # - id: viewpoints
   #   contents: 
@@ -124,15 +123,15 @@ toc: false
 ---
 ::: {.content-container}
 ::: {.top-story .purple-background}
-<a href="/careers/career-profiles/posts/2023/06/28/claire-morton.qmd">
+<a href="/ideas/posts/2023/07/03/trusted-AI.qmd">
 
 ::: grid
 ::: {.g-col-12 .g-col-lg-4 .top-story-text}
-## Pride, identity, and the power of data
-This week, in celebration of Pride, Real World Data Science is collaborating with the JEDI Outreach Group of the American Statistical Association (ASA) and the ASA LGBTQ+ Advocacy Committee to highlight the achievements of statisticians and data scientists from across the LGBTQ+ spectrum. Read inspiring career profiles of Claire Morton and Albert Lee.
+## Trusted AI: translating AI ethics from theory into practice
+Data scientists can act as critical enablers of ethical AI when they have the right knowledge and toolkits at their disposal. Maxine Setiawan and Mira Pijselman review three key attributes of trustworthy AI -- transparency, explainability, and fairness -- and ways to put these into practice.
 :::
 ::: {.g-col-12 .g-col-lg-8 .top-story-img}
-![](careers/career-profiles/posts/2023/06/28/images/claire-and-albert.png)
+![](ideas/posts/2023/07/03/images/explainable-AI.png)
 :::
 :::
 
@@ -167,11 +166,11 @@ Welcome to the home of **Real World Data Science**, a new project from the [Roya
 ::: {.pullout-block .black-background}
 ![](images/quote-purple.png){width="100px"}
 
-## ChatGPT isn’t even close to the sort of artificial superintelligence that might conceivably pose a threat to humankind. The models underpinning it are slow learners that require immense volumes of data to construct anything akin to the versatile concepts humans can concoct from only a few examples.
-Michael Timothy Bennett challenges the 'AI doomsayer' narrative 
+## If we are to embrace the concept of reproducibility, we must write and publish code under the assumption that someone, somewhere, will want to rerun our code. And, if we expect that someone will want to rerun our code (and hopefully check it), we should ensure that the code is readable and does not take too long to run.
+Davit Svanidze et al. on the road to reproducible research
 
 ::: {.button}
-[Read the article](viewpoints/posts/2023/06/05/no-AI-probably-wont-kill-us.qmd)
+[Start your journey](case-studies/posts/2023/06/15/road-to-reproducible-research.qmd)
 :::
 
 :::
@@ -193,35 +192,6 @@ Michael Timothy Bennett challenges the 'AI doomsayer' narrative
 
 ::: {.content-container}
 ::: {.listing-block}
-<a href="ideas/index.qmd">
-
-## Data Science Ideas
-</a> 
-
-::: {#ideas}
-:::
-
-:::
-:::
-
-::: {.pullout-text}
-::: {.pullout-container}
-::: {.pullout-block .black-background}
-![](images/quote-purple.png){width="100px"}
-
-## For me, the question is not, ‘Do we understand how ChatGPT works?’ We don’t understand how humans work, and surely we’re trying to develop something that enhances human thinking in some way. The more important question is, ‘How do we know that what is produced is useful?’
-Data science leaders discuss large language models
-
-::: {.button}
-[Join the debate](careers/posts/2023/05/18/chatgpt-data-science-pt2.html)
-:::
-
-:::
-:::
-:::
-
-::: {.content-container}
-::: {.listing-block}
 <a href="viewpoints/editors-blog/index.qmd">
 
 ## Editors' Blog
@@ -233,7 +203,36 @@ Data science leaders discuss large language models
 :::
 :::
 
+::: {.pullout-text}
+::: {.pullout-container}
+::: {.pullout-block .black-background}
+![](images/quote-purple.png){width="100px"}
+
+## ChatGPT isn’t even close to the sort of artificial superintelligence that might conceivably pose a threat to humankind. The models underpinning it are slow learners that require immense volumes of data to construct anything akin to the versatile concepts humans can concoct from only a few examples.
+Michael Timothy Bennett challenges the 'AI doomsayer' narrative 
+
+::: {.button}
+[Read the article](viewpoints/posts/2023/06/05/no-AI-probably-wont-kill-us.qmd)
+:::
+
+:::
+:::
+:::
+
 ::: {.content-container}
+::: {.listing-block}
+<a href="ideas/index.qmd">
+
+## Data Science Ideas
+</a> 
+
+::: {#ideas}
+:::
+
+:::
+:::
+
+<!-- ::: {.content-container}
 ::: {.listing-block}
 <a href="careers/index.qmd">
 
@@ -244,7 +243,7 @@ Data science leaders discuss large language models
 :::
 
 :::
-:::
+::: -->
 
 ::: {.footer-text}
 ::: {.footer-container .black-background}
