email link added

--- a/ts-and-cs.qmd
+++ b/ts-and-cs.qmd
@@ -47,7 +47,7 @@ We will not link to websites that contain racist, sexual or misleading content; 
 
 The decision of RWDS is final and no correspondence will be entered into. 
 
-If you wish to report a concern, please email b.tarran@rss.org.uk
+If you wish to report a concern, please email [b.tarran@rss.org.uk](mailto:b.tarran@rss.org.uk).
 
 ## Software and services
 Source code and files for this site are available from [GitHub](https://github.com/realworlddatascience/realworlddatascience.github.io). Use of our GitHub repository is governed by the [Contributor Covenant Code of Conduct](#contributor-covenant-code-of-conduct). 
