final edits to text

--- a/viewpoints/editors-blog/posts/2023/07/07/LDW.qmd
+++ b/viewpoints/editors-blog/posts/2023/07/07/LDW.qmd
@@ -17,9 +17,9 @@ image-alt: An aerial view of London and the River Thames, taken from The Shard, 
 
 My highlights of the week? Well, of course, I really enjoyed being part of the event that was hosted at the Royal Statistical Society on Tuesday. The [Statisticians for Society](https://rss.org.uk/membership/volunteering-and-promoting/statisticians-for-society-initiative/) workshop brought together charities and statisticians to explore ways in which data and statistics can support third sector organisations to deliver on their charitable aims as well as demonstrate to communities and funders the impact they are having. There's a nice selection of [case studies of successful past projects on the RSS website](https://rss.org.uk/membership/volunteering-and-promoting/statisticians-for-society-initiative/case-studies/), and hopefully the London Data Week event will result in several new additions to this collection in due course.
 
-I wasn't able to attend this event myself, but I'm really looking forward to seeing the outputs of the [Better Images of AI](https://betterimagesofai.org/images) Workshop, which was also held on Tuesday. Real World Data Science has used several of the group's images to illustrate past articles ([here](https://realworlddatascience.net/viewpoints/editors-blog/posts/2022/11/23/LLM-content-warning.html#qa), [here](https://realworlddatascience.net/viewpoints/posts/2023/06/05/no-AI-probably-wont-kill-us.html) and [here](https://realworlddatascience.net/ideas/posts/2023/07/03/trusted-AI.html)), so I'm excited to see what gets added to the image gallery in the coming weeks.
+I wasn't able to attend this event myself, but I'm really looking forward to viewing the outputs of the [Better Images of AI](https://betterimagesofai.org/images) workshop, which was also held on Tuesday. Real World Data Science has used several of the group's images to illustrate past articles ([here](https://realworlddatascience.net/viewpoints/editors-blog/posts/2022/11/23/LLM-content-warning.html#qa), [here](https://realworlddatascience.net/viewpoints/posts/2023/06/05/no-AI-probably-wont-kill-us.html) and [here](https://realworlddatascience.net/ideas/posts/2023/07/03/trusted-AI.html)), so I'm excited to see what gets added to the image gallery in the coming weeks.
 
-Sticking with the AI theme, I also got to explore the ["AI: Who's Looking After Me?" exhibition](https://london.sciencegallery.com/ai-season) at the Science Gallery, where I found myself unexpectedly moved by one installation in particular -- an artificial landfill of broken and discarded tablets and smart speakers, explaining matter-of-factly, but with an unmistakable air of mournfulness, that they had been replaced "by a newer model that is better because it is lighter, or heavier, or bigger, or smaller...". Fortunately I was able to cheer myself up with another exhibit, which tasks visitors with helping a chatbot to define and understand love.
+Sticking with the AI theme, I also got to explore the ["AI: Who's Looking After Me?" exhibition](https://london.sciencegallery.com/ai-season) at the Science Gallery, where I found myself unexpectedly moved by one installation in particular -- [an artificial landfill of broken and discarded tablets and smart speakers](https://london.sciencegallery.com/ai-artworks/newly-forgotten-technologies), explaining matter-of-factly, but with an unmistakable air of mournfulness, that they had been replaced "by a newer model that is better because it is lighter, or heavier, or bigger, or smaller...". Fortunately I was able to cheer myself up with another exhibit, which tasks visitors with [helping a chatbot to define and understand love](https://london.sciencegallery.com/ai-artworks/looking-for-love).
 
 Later on in my visit to the Science Gallery (which was actually last Thursday, before London Data Week officially began), I listened to a panel debate on "Building Better AI in the Open", featuring Margaret Mitchell of HuggingFace, Lara Groves of the Ada Lovelace Institute, and Irini Papadimitriou of FutureEverything, facilitated by artist and machine learning design researcher Caroline Sinders. A recording of the panel is below, and well worth a watch for discussion of:
 
