--- a/index.qmd
+++ b/index.qmd
@@ -16,7 +16,7 @@ listing:
     - /careers
     - /viewpoints
     - "!index.qmd"
-    - "!trusted-AI.qmd"
+    - "!LDW.qmd"
     sort: "date desc"
     type: grid
     categories: false
@@ -123,15 +123,15 @@ toc: false
 ---
 ::: {.content-container}
 ::: {.top-story .purple-background}
-<a href="/ideas/posts/2023/07/03/trusted-AI.qmd">
+<a href="/viewpoints/editors-blog/posts/2023/07/07/LDW.qmd">
 
 ::: grid
 ::: {.g-col-12 .g-col-lg-4 .top-story-text}
-## Trusted AI: translating AI ethics from theory into practice
-Data scientists can act as critical enablers of ethical AI when they have the right knowledge and toolkits at their disposal. Maxine Setiawan and Mira Pijselman review three key attributes of trustworthy AI -- transparency, explainability, and fairness -- and ways to put these into practice.
+## Teaching a chatbot about love, and other adventures from London Data Week
+Our editor shares his personal highlights from the first ever London Data Week, including an art exhibition about artificial intelligence, a panel discussion on the benefits of open source, and a workshop to help charities tap into statistical expertise.
 :::
 ::: {.g-col-12 .g-col-lg-8 .top-story-img}
-![](ideas/posts/2023/07/03/images/explainable-AI.png)
+![](viewpoints/editors-blog/posts/2023/07/07/images/benjamin-davies-Oja2ty_9ZLM-unsplash.png)
 :::
 :::
 
