fixed margin on callouts

--- a/ideas/datasciencebites/posts/2022/12/13/ridesharing.qmd
+++ b/ideas/datasciencebites/posts/2022/12/13/ridesharing.qmd
@@ -16,7 +16,7 @@ aliases:
   - /news-and-views/datasciencebites/posts/2022/12/13/ridesharing.html
   - /news-and-views/datasciencebites/posts/2022/12/13/ridesharing.qmd
 ---
-:::{.callout-note collapse="false"}
+:::{.callout-note style="margin-top: 0rem;" collapse="false"}
 ## About the paper and this post
 
 **Title:** Dynamic causal effects evaluation in A/B testing with a reinforcement learning framework
