--- a/ideas/datasciencebites/posts/2023/01/24/pulling-patterns.qmd
+++ b/ideas/datasciencebites/posts/2023/01/24/pulling-patterns.qmd
@@ -14,7 +14,7 @@ toc: true
 aliases: 
   - /news-and-views/datasciencebites/posts/2023/01/24/pulling-patterns.html
 ---
-:::{.callout-note collapse="false"}
+:::{.callout-note style="margin-top: 0rem;" collapse="false"}
 ## About the paper and this post
 
 **Title:** Extracting the main trend in a data set: The Sequencer algorithm
