--- a/ideas/datasciencebites/posts/2023/03/02/basket-complementarity.qmd
+++ b/ideas/datasciencebites/posts/2023/03/02/basket-complementarity.qmd
@@ -18,7 +18,7 @@ Anyone who has ever worked in a retail store will be familiar with the concept o
 
 A large amount of cross-selling, whether attempted in store by a sales assistant or online by an algorithm, relies on the concept of *complementarity*: that certain products are often bought and/or used together. Relationships between products might be obvious -- paint and paintbrushes, for example -- or they may be obscure and only revealed through the analysis of large datasets. In a 2021 paper that highlights complementarity's relevance to association analysis, Puka and Jedrusik put forward “[a new measure of complementarity in market basket data](https://www.mdpi.com/0718-1876/16/4/39)”, which sheds light on how product recommendations can be derived. 
 
-:::{.callout-note collapse="false"}
+:::{.callout-note style="margin-top: 0rem;" collapse="false"}
 ## About the paper
 
 **Title:** A new measure of complementarity in market basket data
