--- a/ideas/datasciencebites/posts/2023/07/13/choosing-right-forecast.qmd
+++ b/ideas/datasciencebites/posts/2023/07/13/choosing-right-forecast.qmd
@@ -14,7 +14,7 @@ toc: false
 ---
 intro
 
-:::{.callout-note style="margin-top: 0rem;" appearance="simple" collapse="false"}
+:::{.callout-note style="margin-top: 0rem;"  collapse="false"}
 ## About the paper
 
 **Title:** A new measure of complementarity in market basket data
