fixed callout spacings

--- a/viewpoints/editors-blog/posts/2023/01/27/talking-chatgpt.qmd
+++ b/viewpoints/editors-blog/posts/2023/01/27/talking-chatgpt.qmd
@@ -54,7 +54,7 @@ Detlef Nauck is a member of the [Real World Data Science editorial board](/news-
 * [Getty Images is suing the creators of AI art tool Stable Diffusion for scraping its content](https://www.theverge.com/2023/1/17/23558516/ai-art-copyright-stable-diffusion-getty-images-lawsuit) - The Verge, January 17, 2023
 
 ## Transcript
-:::{.callout-warning appearance="simple"}
+:::{.callout-warning style="margin-top: 0.75rem;" appearance="simple"}
 This transcript has been produced using [speech-to-text transcription software](https://otter.ai/). It has been only lightly edited to correct mistranscriptions and remove repetitions. 
 :::
 
